--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body, html {
+  font-family: 'Quattrocento Sans', sans-serif;
+  font-size: 16px;
+}
